# ows

./: .gitignore  README.md  todo.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
bindings/node/: Cargo.toml  README.md  package-lock.json  package.json
bindings/node/__test__/: index.spec.mjs
bindings/node/npm/darwin-arm64/: package.json
bindings/node/npm/darwin-x64/: package.json
bindings/node/npm/linux-arm64-gnu/: package.json
bindings/node/npm/linux-x64-gnu/: package.json
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/python/lws/: __init__.py
bindings/python/src/: lib.rs
bindings/python/tests/: test_bindings.py
docs/: 06-agent-access-layer.md  07-supported-chains.md
lws/: Cargo.toml  install.sh
lws/crates/lws-cli/: Cargo.toml
lws/crates/lws-cli/src/: audit.rs  main.rs  vault.rs
lws/crates/lws-cli/src/commands/: derive.rs  generate.rs  info.rs  mod.rs  sign.rs  uninstall.rs  update.rs  wallet.rs
lws/crates/lws-core/: Cargo.toml
lws/crates/lws-lib/: Cargo.toml
lws/crates/lws-lib/src/: error.rs  lib.rs  ops.rs  types.rs  vault.rs
lws/crates/lws-signer/: Cargo.toml
lws/crates/lws-signer/src/: crypto.rs  traits.rs
lws/crates/lws-signer/src/chains/: solana.rs
ows/crates/ows-cli/: Cargo.toml
ows/crates/ows-cli/src/: main.rs
ows/crates/ows-cli/src/commands/: mod.rs  pay.rs  wallet.rs
ows/crates/ows-core/: Cargo.toml
ows/crates/ows-core/src/: chain.rs  config.rs
ows/crates/ows-lib/: Cargo.toml
ows/crates/ows-pay/: Cargo.toml
ows/crates/ows-pay/src/: chains.rs  discovery.rs  error.rs  fund.rs  lib.rs  types.rs  x402.rs
ows/crates/ows-signer/: Cargo.toml
scripts/: set-version.sh
skills/lws/: SKILL.md
skills/ows/: SKILL.md
website/: index.html
website/css/: style.css
