[package]
name = "lws-node"
version = "0.2.0"
edition = "2021"
description = "Node.js native bindings for the Lightweight Wallet Signer"

[lib]
crate-type = ["cdylib"]

[dependencies]
lws-lib = { path = "../../lws/crates/lws-lib" }
napi = { version = "2", features = ["napi6", "serde-json"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
napi-build = "2"
