[package]
name = "lws-cli"
version = "0.2.27"
edition = "2021"
license = "MIT"
description = "CLI for the Local Wallet Standard"
repository = "https://github.com/dawnlabsai/lws"

[[bin]]
name = "lws"
path = "src/main.rs"

[dependencies]
lws-core = { path = "../lws-core", version = "=0.2.27" }
lws-signer = { path = "../lws-signer", version = "=0.2.27" }
lws-lib = { path = "../lws-lib", version = "=0.2.27" }
clap = { version = "4", features = ["derive", "env"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
hex = "0.4"
thiserror = "2"
tempfile = "3"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
zeroize = "1"

[dev-dependencies]
lws-signer = { path = "../lws-signer", version = "=0.2.27", features = ["fast-kdf"] }
