[package]
name = "lws-lib"
version = "0.2.27"
edition = "2021"
license = "MIT"
description = "High-level library API for the Local Wallet Standard"
repository = "https://github.com/dawnlabsai/lws"

[features]
default = []
fast-kdf = ["lws-signer/fast-kdf"]

[dependencies]
lws-core = { path = "../lws-core", version = "=0.2.27" }
lws-signer = { path = "../lws-signer", version = "=0.2.27" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
base64 = "0.22"
getrandom = "0.2"
zeroize = "1"

[dev-dependencies]
tempfile = "3"
sha3 = "0.10"
k256 = { version = "0.13", features = ["ecdsa"] }
lws-signer = { path = "../lws-signer", version = "=0.2.27", features = ["fast-kdf"] }
